# local-llm-training-k8s

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
configs/presets/: ddp_mlflow.yaml  ddp_smoke.yaml  dummy_smoke.yaml  example.yaml  gpt_smoke.yaml  gpt_wikitext.yaml  gpt_wikitext_better.yaml  gpt_wikitext_ddp.yaml
docs/: k8s.md
k8s/: Dockerfile  configmap.yaml  dashboard-admin.yaml  entrypoint.sh  job.yaml  kind-config.yaml  rbac.yaml  service.yaml  storage.yaml  test_e2e.sh
notebooks/: dummy_plugins_smoke.ipynb  gpt_model_smoke.ipynb  trained_vs_random_completion.ipynb
src/llmtrain/: __init__.py  __main__.py  cli.py
src/llmtrain/config/: __init__.py  loader.py  schemas.py
src/llmtrain/data/: __init__.py  base.py  dummy_text.py  hf_text.py
src/llmtrain/distributed/: __init__.py
src/llmtrain/models/: __init__.py  base.py  dummy_gpt.py  gpt.py
src/llmtrain/registry/: __init__.py  data.py  models.py
src/llmtrain/tracking/: __init__.py  base.py  mlflow.py
src/llmtrain/training/: __init__.py  checkpoint.py  dry_run.py  trainer.py
src/llmtrain/utils/: __init__.py  logging.py  metadata.py  run_dir.py  run_id.py  summary.py
tests/: test_checkpoint.py  test_cli.py  test_config.py  test_distributed.py  test_dry_run.py  test_dummy_text_data.py  test_gpt_adapter.py  test_gpt_model.py  test_hf_text_data.py  test_hf_text_integration.py  test_integration_flow.py  test_logging.py  test_registry.py  test_run_id.py  test_summary.py  test_tracking.py  test_trainer.py
